package util;

import "Person.proto";

option java_package = "com.streamsets.pipeline.lib.util";
option java_outer_classname = "EngineerProto";

message Engineer {

    extensions 200 to 299;

    required Person person = 1;
    required string employeeId = 2;

    optional string depName = 3 [default = "engineering"];
    optional int32 depid = 4;

}
