syntax = "proto3";
package util;

option java_package = "com.streamsets.pipeline.lib.util";
option java_outer_classname = "OneofProto";

message Oneof {
    oneof oneof_name {
        int32 oneofInt = 10;
        string oneofString = 2;
    }
}
